# metrics-analysis-project

./: .gitattributes  .gitignore  .nojekyll  .readthedocs.yaml  C2T_max_plus.gt  CITATION.cff  M1_max_plus.gt  M1_max_plus.net.nml  M1a_max_plus.gt  M1a_max_plus.net.nml  M1b_max_plus.gt  M2M1S1_max_plus.gt  M2M1S1_max_plus.net.nml  M2_max_plus.gt  M2_max_plus.net.nml  M2aM1aS1a_max_plus.gt  M2aM1aS1a_max_plus.net.nml  M2a_max_plus.gt  M2b_max_plus.gt  Network_Metrics_Analysis.ipynb  Network_metrcs_analysis_protocol.md  README.md  S1_max_plus.gt  S1a_max_plus.gt  S1bM1bM2b_max_plus.gt  S1bM1bM2b_max_plus.net.nml  S1b_max_plus.gt  T2C_max_plus.gt  TC2CT.gt  TC2CT.net.nml  TC2IT2PTCT.gt  TC2IT2PTCT.net.nml  TC2IT4_IT2CT.gt  TC2IT4_IT2CT.net.nml  TC2PT.gt  TC2PT.net.nml  _config.yml  _toc.yml  analyze_networks_metrics.py  build_docs.py  (+48 more)
.github/workflows/: ci.yml  deploy-pages.yml
analysis/: Dockerfile  algorithms_extracted.py  compare_algorithms.py  requirements.txt
binder/: environment.yml  postBuild
centrality/M1_max_plus/: M1_max_plus.gt
centrality/M2M1S1_max_plus/: M2M1S1_max_plus.gt
centrality/M2aM1aS1a_max_plus/: M2aM1aS1a_max_plus.gt
centrality/TC2PT/: TC2PT.gt
centrality/max_CTC_plus/: max_CTC_plus.gt
docs/: index.html
metrics/M1_max_plus/: M1_max_plus.gt
metrics/M2M1S1_max_plus/: M2M1S1_max_plus.gt
metrics/M2aM1aS1a_max_plus/: M2aM1aS1a_max_plus.gt
metrics/TC2PT/: TC2PT.gt
metrics/max_CTC_plus/: max_CTC_plus.gt
metrics_analysis_outputs/iT_max_plus/: iT_max_plus_metrics.csv  iT_max_plus_metrics.npz
metrics_analysis_outputs/max_CTC_plus/: max_CTC_plus_metrics.csv  max_CTC_plus_metrics.npz
metrics_analysis_outputs/max_M2M1S1_plus/: max_M2M1S1_plus_metrics.csv  max_M2M1S1_plus_metrics.npz
metrics_analysis_outputs/optimus_CTC_plus/: optimus_CTC_plus_metrics.csv  optimus_CTC_plus_metrics.npz
metrics_analysis_outputs/optimus_M2M1S1_plus/: optimus_M2M1S1_plus_metrics.csv  (+1 more)
metrics_out/: TC2CT_metrics.csv  TC2CT_metrics.npz  TC2IT2PTCT_metrics.csv  TC2IT2PTCT_metrics.npz  TC2IT4_IT2CT_metrics.csv  TC2IT4_IT2CT_metrics.npz  TC2PT_metrics.csv  TC2PT_metrics.npz
net_files/: C2T_max_plus.net.nml  M1_max_plus.net.nml  M1a_max_plus.net.nml  M1b_max_plus.net.nml  M2M1S1_max_plus.net.nml  M2_max_plus.net.nml  M2aM1aS1a_max_plus.net.nml  M2a_max_plus.net.nml  M2b_max_plus.net.nml  S1_max_plus.net.nml  S1a_max_plus.net.nml  S1bM1bM2b_max_plus.net.nml  S1b_max_plus.net.nml  T2C_max_plus.net.nml  TC2CT.net.nml  TC2IT2PTCT.net.nml  TC2IT4_IT2CT.net.nml  TC2PT.net.nml  iC_max.net.nml  iT_max_plus.net.nml  loop_L1.net.nml  loop_L23.net.nml  loop_L4.net.nml  loop_L5.net.nml  loop_L6.net.nml  loop_iT_max_plus.net.nml  max_CTC_plus.net.nml
robust_calibrated/: M1_max_plus_robust_calibrated_metrics.csv  M1_max_plus_robust_calibrated_metrics.npz  M2M1S1_max_plus_robust_calibrated_metrics.csv  M2M1S1_max_plus_robust_calibrated_metrics.npz  M2aM1aS1a_max_plus_robust_calibrated_metrics.csv  M2aM1aS1a_max_plus_robust_calibrated_metrics.npz  TC2PT_robust_calibrated_metrics.csv  TC2PT_robust_calibrated_metrics.npz  max_CTC_plus_robust_calibrated_metrics.csv  max_CTC_plus_robust_calibrated_metrics.npz
src/: main.py
test_output/: iT_max_plus_metrics.csv  iT_max_plus_metrics.npz
tests/: test_generator.py  test_gt_generator.py  test_plotting.py  test_utils.py
(+20 files in other folders)
