[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "network-metrics-package"
dynamic = ["version"]
description = "A comprehensive Python framework for analyzing complex networks using graph theory metrics with built-in visualization and reproducible research capabilities"
readme = "README.md"
authors = [{name = "Hua Cheng", email = "trernghwhuare@aliyun.com"}]
maintainers = [{name = "Hua Cheng", email = "trernghwhuare@aliyun.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["network-analysis", "graph-theory", "complex-networks", "data-science", "reproducible-research", "visualization"]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.7.0", 
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "networkx>=2.6.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "pytest-cov>=2.12.0", 
    "black>=21.0.0",
    "flake8>=3.9.0",
]
docs = [
    "jupyter-book>=0.12.0",
    "myst-parser>=0.15.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/trernghwhuare/metrics-analysis-project"
"Bug Reports" = "https://github.com/trernghwhuare/metrics-analysis-project/issues"
Source = "https://github.com/trernghwhuare/metrics-analysis-project"
Documentation = "https://github.com/trernghwhuare/metrics-analysis-project#readme"

[project.scripts]
analyze-network-metrics = "network_metrics_package.main:main"

[tool.setuptools_scm]
version_scheme = "release-branch-semver"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --strict-config -v"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = "E203,W503"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    "_build",
]